<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="@drawable/bg_main"
    >

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_login_background"
        android:alpha="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/Back"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlSignIn"
        android:layout_marginBottom="160dp"
        />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="Prime"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/rlSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/Forget_Password"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/Please_input_you_user_name_to_reset_the_password"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/txtTitle"
            android:textSize="18dp"
            />

        <RelativeLayout
            android:id="@+id/rlLogInform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSubTitle"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/edFUsername"
                android:textColorHint="@color/colorGray"
                android:backgroundTint="@color/colorWhite"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="start"
                    android:hint="@string/Username"
                    android:inputType="textCapWords"
                    android:shadowColor="@color/colorWhite"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnForgetPassword"
                android:layout_width="400dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="@color/colorWhite"
                android:text="@string/Submit"
                android:textColorHint="@color/colorWhite"
                android:fontFamily="@font/proxima_nova_bold"
                android:background="#45B950"
                android:layout_below="@+id/edFUsername"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>